--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sheriff",
+  "homepage": "https://barteknowicki.github.io/sheriff/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +12,7 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-measure": "^2.0.6",
+    "gh-pages": "^3.1.0",
     "gsap": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
@@ -21,6 +23,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
